# Laborarbeit2_Klauser_Alber

./: .gitignore
code/: CMakeLists.txt
code/include/: developer.hpp
code/src/: developer.cpp  main.cpp
code/test/: test.cpp
test/: test.cpp
